name: pi
description: Pi calculus interpreter
version: 0.0.0
build-type: Simple
cabal-version: >= 1.10
extra-source-files: README.md
license-file: LICENSE.md

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Util, Syntax, Interpreter, Lexer, Parser
  build-depends: base >= 4.7 && < 5, array, containers, mtl

executable pi
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5, array, containers, mtl, pi
  other-modules: Util, Syntax, Interpreter, Lexer, Parser
  build-tools: alex, happy
